--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git-gateway
+  name: github
   branch: main
 media_folder: public/images
 site_url: https://yourpage.tld
@@ -7,177 +7,177 @@ display_url: yourpage.tld
 logo_url: /images/logo.svg # Logo used in CMS
 public_folder: /images
 # publish_mode: editorial_workflow
-locale: "de"
+locale: 'de'
 slug:
-  encoding: "ascii"
+  encoding: 'ascii'
   clean_accents: true
-  sanitize_replacement: "_"
+  sanitize_replacement: '_'
 
 collections:
-  - name: "config"
-    label: "Einstellungen"
+  - name: 'config'
+    label: 'Einstellungen'
     delete: false
     editor:
       preview: false
     files:
-      - name: "general"
-        label: "Website Einstellungen"
-        file: "config.json"
-        description: "General site settings"
+      - name: 'general'
+        label: 'Website Einstellungen'
+        file: 'config.json'
+        description: 'General site settings'
         fields:
-          - label: "URL"
-            name: "base_url"
-            widget: "string"
-            hint: "Do not enter the trailing slash of the URL"
-          - label: "Site title"
-            name: "site_title"
-            widget: "string"
-          - label: "Site description"
-            name: "site_description"
-            widget: "string"
-          - label: "Site keywords"
-            name: "site_keywords"
-            widget: "list"
-            summary: "{{fields.keyword.keyword}}"
+          - label: 'URL'
+            name: 'base_url'
+            widget: 'string'
+            hint: 'Do not enter the trailing slash of the URL'
+          - label: 'Site title'
+            name: 'site_title'
+            widget: 'string'
+          - label: 'Site description'
+            name: 'site_description'
+            widget: 'string'
+          - label: 'Site keywords'
+            name: 'site_keywords'
+            widget: 'list'
+            summary: '{{fields.keyword.keyword}}'
             field:
               label: Keyword
               name: keyword
-              widget: "string"
-      - name: "authors"
-        label: "Authors"
-        file: "meta/authors.yml"
-        description: "Author descriptions"
+              widget: 'string'
+      - name: 'authors'
+        label: 'Authors'
+        file: 'meta/authors.yml'
+        description: 'Author descriptions'
         fields:
           - name: authors
             label: Authors
-            label_singular: "Author"
+            label_singular: 'Author'
             widget: list
             fields:
-              - label: "Slug"
-                name: "slug"
-                widget: "string"
-                hint: "The part of a URL identifies the author"
-              - label: "Name"
-                name: "name"
-                widget: "string"
-                hint: "First and Last"
-              - label: "Introduction"
-                name: "introduction"
+              - label: 'Slug'
+                name: 'slug'
+                widget: 'string'
+                hint: 'The part of a URL identifies the author'
+              - label: 'Name'
+                name: 'name'
+                widget: 'string'
+                hint: 'First and Last'
+              - label: 'Introduction'
+                name: 'introduction'
                 required: false
-                widget: "text"
-              - label: "Profilbild"
-                name: "profilePic"
-                widget: "file"
-                hint: "als .png bitte"
+                widget: 'text'
+              - label: 'Profilbild'
+                name: 'profilePic'
+                widget: 'file'
+                hint: 'als .png bitte'
                 required: false
-                default: "/uploads/profilPic.png"
+                default: '/uploads/profilPic.png'
                 media_library:
                   config:
                     multiple: true
-          - name: "tags"
-            label: "Tags"
-            file: "meta/tags.yml"
-            description: "List of tags"
+          - name: 'tags'
+            label: 'Tags'
+            file: 'meta/tags.yml'
+            description: 'List of tags'
             widget: list
             fields:
               - name: tags
                 label: Tags
-                label_singular: "Tag"
+                label_singular: 'Tag'
                 fields:
-                  - label: "Slug"
-                    name: "slug"
-                    widget: "string"
-                    hint: "The part of a URL identifies the tag"
-                  - label: "Display Name"
-                    name: "name"
-                    widget: "string"
-                    hint: "Tag name for displaying on the site"
-  - name: "pages"
-    label: "Seiten"
+                  - label: 'Slug'
+                    name: 'slug'
+                    widget: 'string'
+                    hint: 'The part of a URL identifies the tag'
+                  - label: 'Display Name'
+                    name: 'name'
+                    widget: 'string'
+                    hint: 'Tag name for displaying on the site'
+  - name: 'pages'
+    label: 'Seiten'
     delete: false
     editor:
       preview: false
     files:
-      - name: "Home"
-        label: "Landingpage"
-        file: "meta/home.yml"
-        description: "Landingpage"
+      - name: 'Home'
+        label: 'Landingpage'
+        file: 'meta/home.yml'
+        description: 'Landingpage'
         fields:
           - name: title
             label: Titel
-            widget: "string"
+            widget: 'string'
           - name: body
             label: Inhalt
-            widget: "markdown"
+            widget: 'markdown'
           - name: attention
             label: Aufmerksamkeit
-            widget: "string"
+            widget: 'string'
           - name: surveyUrl
             label: Umfrage Url
-            widget: "string"
-      - name: "footerContent"
-        label: "Footer"
-        file: "meta/footerContent.yml"
-        description: "Details zu Footer, Impressum und Datenschutz"
+            widget: 'string'
+      - name: 'footerContent'
+        label: 'Footer'
+        file: 'meta/footerContent.yml'
+        description: 'Details zu Footer, Impressum und Datenschutz'
         fields:
           - name: impressBody
             label: Impressum
-            widget: "markdown"
+            widget: 'markdown'
           - name: dataSecurityBody
             label: Datenschutz
-            widget: "markdown"
+            widget: 'markdown'
           - name: footerMeta
             label: Footer Details
-            widget: "string"
-            description: "Text neben Jahr und Impressum/Datenschutz"
-  - name: "posts"
-    label: "Posts"
-    folder: "content/posts/"
-    extension: "mdx"
-    format: "frontmatter"
+            widget: 'string'
+            description: 'Text neben Jahr und Impressum/Datenschutz'
+  - name: 'posts'
+    label: 'Posts'
+    folder: 'content/posts/'
+    extension: 'mdx'
+    format: 'frontmatter'
     create: true
-    slug: "{{slug}}"
+    slug: '{{slug}}'
     identifier_field: slug
-    summary: "{{title}}"
+    summary: '{{title}}'
     fields:
-      - label: "Slug"
-        name: "slug"
-        widget: "string"
-      - label: "Title"
-        name: "title"
-        widget: "string"
-      - label: "Publish Date"
-        name: "date"
-        widget: "datetime"
-        format: "YYYY-MM-DD"
-        dateFormat: "YYYY-MM-DD"
+      - label: 'Slug'
+        name: 'slug'
+        widget: 'string'
+      - label: 'Title'
+        name: 'title'
+        widget: 'string'
+      - label: 'Publish Date'
+        name: 'date'
+        widget: 'datetime'
+        format: 'YYYY-MM-DD'
+        dateFormat: 'YYYY-MM-DD'
         timeFormat: false
       - label: Author
-        name: "author"
+        name: 'author'
         widget: relation
-        collection: "meta"
-        file: "authors"
+        collection: 'meta'
+        file: 'authors'
         searchFields:
-          - "authors.*.name"
+          - 'authors.*.name'
         displayFields:
-          - "authors.*.name"
-        valueField: "authors.*.slug"
+          - 'authors.*.name'
+        valueField: 'authors.*.slug'
       - label: Tags
-        label_singular: "Tag"
-        name: "tags"
+        label_singular: 'Tag'
+        name: 'tags'
         widget: list
-        summary: "{{fields.tag}}"
+        summary: '{{fields.tag}}'
         field:
           label: Tag
           name: tag
           widget: relation
-          collection: "meta"
-          file: "tags"
+          collection: 'meta'
+          file: 'tags'
           searchFields:
-            - "tags.*.name"
+            - 'tags.*.name'
           displayFields:
-            - "tags.*.name"
-          valueField: "tags.*.slug"
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
+            - 'tags.*.name'
+          valueField: 'tags.*.slug'
+      - label: 'Body'
+        name: 'body'
+        widget: 'markdown'
